Update MeetUpServiceTest